--- a/res/layout/general.xml
+++ b/res/layout/general.xml
@@ -24,9 +24,10 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="200dp"
+        android:layout_height="0dp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
+        android:layout_weight="4"
         android:background="@color/wheel_bg_color"
         android:orientation="vertical"
         android:padding="6dp" >
@@ -50,7 +51,8 @@
     <TextView
         style="@style/text_black_content"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
+        android:layout_weight="1"
         android:paddingBottom="10dp"
         android:paddingLeft="20dp"
         android:paddingTop="25dp"
@@ -58,7 +60,8 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
+        android:layout_weight="2"
         android:background="#EEEFEF" >
 
         <EditText
@@ -72,8 +75,9 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="0dp"
         android:layout_margin="25dp"
+        android:layout_weight="1"
         android:orientation="horizontal" >
 
         <Button
@@ -98,7 +102,8 @@
     <TextView
         style="@style/text_black_content"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
         android:gravity="center"
         android:text="本系統以簡訊報案（提醒使用簡訊）" />
 
