--- a/res/layout/general.xml
+++ b/res/layout/general.xml
@@ -53,15 +53,15 @@
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:layout_weight="1"
+        android:gravity="bottom"
         android:paddingBottom="10dp"
         android:paddingLeft="20dp"
-        android:paddingTop="25dp"
         android:text="您即將傳送的報案內容如下：" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="2"
+        android:layout_weight="1"
         android:background="#EEEFEF" >
 
         <EditText
@@ -70,16 +70,16 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_margin="5dp"
+            android:layout_margin="2dp"
             android:gravity="center" />
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_margin="25dp"
         android:layout_weight="1"
-        android:orientation="horizontal" >
+        android:orientation="horizontal"
+        android:paddingTop="10dp" >
 
         <Button
             style="@style/text_white_content"
