--- a/res/layout-normal/personal_data.xml
+++ b/res/layout-normal/personal_data.xml
@@ -58,8 +58,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
-            android:layout_marginRight="28.42dp"
-            android:text="1" />
+            android:layout_marginRight="28.42dp" />
     </RelativeLayout>
 
     <LinearLayout
