--- a/res/layout/personal_data.xml
+++ b/res/layout/personal_data.xml
@@ -9,7 +9,7 @@
         android:id="@+id/title"
         android:layout_width="match_parent"
         android:layout_height="48dp"
-        android:background="@drawable/title"
+        android:background="#FF0"
         android:gravity="center"
         android:text="個人資料"
         android:textColor="@android:color/white"
